# trende

./: .dockerignore  .env.acp.example  .env.example  .gitignore  DEVELOPER_ASSIGNMENTS.md  Dockerfile  HARMONIZATION_COMPLETE.md  MERGE_STATUS.md  PHASE_2A_MODULARIZATION.md  PRODUCTION_READINESS.md  WORK_COMPLETE.md  baseline-attested-index.ts  deploy-backend.sh  docker-compose.yml  llms.txt  main.py  pyproject.toml  readme.md  requirements.txt  server.py  setup_web.sh  start_web.sh  twitter_lists.py
backend/: requirements.txt
baseline-attested/: README.md  package.json
contracts/: README.md  foundry.toml  package-lock.json  package.json  remappings.txt
docs/: ACP_GUIDE.md  ACP_INTEGRATION_PLAN.md  ACP_SETUP_GUIDE.md  AGENTIC_UX.md  API.md  ARCHITECTURE.md  ATTESTATION.md  CHAINLINK_DEPLOY.md  CRE_DEPLOY_RUNBOOK.md  GUIDE.md  HACKATHON_DEMO_CHECKLIST.md  HACKATHON_PLAN.md  HACKATHON_SUBMISSION.md  HACKATHON_VIDEO_SCRIPT.md  INTEGRATION.md  INTEGRATIONS.md  PRODUCTION_CHECKLIST.md  ROADMAP.md  TASKS.md  VIRTUALS_OPPORTUNITY.md  VISION.md
eigen-attestor/: .env.example  .env.example.tls  Caddyfile  Dockerfile  README.md  package.json  tsconfig.json
frontend/: lint_output.txt  next.config.ts  package-lock.json  package.json
scripts/: deploy_backend.sh  finals_flow.sh  smoke_matrix.sh  test_agent.py  test_connectors.py  test_consensus.py
shared/: __init__.py  types.ts
templates/: index.html  terminal.html
tests/: test_attestation_api.py  test_consensus_engine_logic.py  test_synthdata_integration.py  test_trends_results_contract.py  test_url_quality.py
(+165 files in other folders)
